# telecom-rag-chatbot

./: README.md  app.py  ingest.py  pyproject.toml  rag.py  requirements.txt  test_api.py
