[project]
name = "telecom-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
]
